Improved LS server livecycle

--- a/livestyle/static/index.html
+++ b/livestyle/static/index.html
@@ -5,6 +5,6 @@
 	<title>LiveStyle Server</title>
 </head>
 <body>
-	LiveStyle websockets server is up and running
+	LiveStyle websockets server is up and running by Sublime Text
 </body>
 </html>
